--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1170,7 +1170,7 @@ main {
   width: 100%;
   height: 100%;
   border: none;
-  filter: grayscale(1) invert(1);
+  filter: sepia(30%);
 }
 
 .contact-form {
